# server

./: pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: main_backendifyi.yml
client/: admin.py  client_secret.json  custom_auth.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_clientprofilemodel_delete_clientmodel.py  0003_clientprofilemodel_name.py  0004_accesstoken.py  0005_rename_accesstoken_accesstokenmodel.py  0006_remove_accesstokenmodel_id_and_more.py  0007_tokenmodel_delete_accesstokenmodel.py  0008_accesstokenmodel_delete_tokenmodel.py  0009_clientprofilemodel_email.py  0010_remove_clientprofilemodel_email.py
core/: settings.py
emailbox/: api_auth.py  models.py  pagination.py  serializers.py  urls.py  validate_email.py  views.py
emailbox/migrations/: 0001_initial.py  0002_alter_apimodel_user.py  0003_delete_apimodel.py  0004_emailboxmodel.py  0005_delete_emailmodel.py  0006_emailmodel.py  0007_emailmodel_total_request.py  0008_emailmodel_account_emailmodel_disposable_provider_and_more.py
newsletter/: admin.py  models.py  serializers.py  urls.py  views.py
newsletter/migrations/: 0001_initial.py
project/: models.py  views.py
project/migrations/: 0001_initial.py  0002_delete_projectmodel.py  0003_initial.py  0004_alter_projectmodel_user.py  0005_alter_projectmodel_product.py
server/: email.py  settings.py  urls.py  wsgi.py
