[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["kothawleprem <kothawleprem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
